--- a/index.html
+++ b/index.html
@@ -32,6 +32,20 @@
             </div>
         </div>
     </div>
+    <section class="section__body">
+        <div class="container2">
+            <div class="ring">
+                <img src="./images/gold-ring-with-shiny-diamond-stone-it.png" alt="ring">
+                <h1 class="ring__title" id="ring_title">{{title}}</h1>
+
+            </div>
+            <div class="ring_2">
+                <h1 class="ring__story" id="story__title">{{story}}</h1>
+                <p class="text" id="text">{{texts}}</p>
+            </div>
+        </div>
+    </section>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
     <script src="./java.js"></script>
 </body>
 
